# wonopcode

./: .gitignore  .mcp.json  .plan.md  AGENTS.md  CHANGELOG.md  CHANGES.md  CLAUDE.md  Cargo.toml  Cross.toml  EVENTS.md  FIX.md  IMPLEMENTATION.md  NEXT_WORK.md  README.md  SECURE_API.md  SEPARATE.md  TRAIT.md  UPDATE.md  deny.toml  install.sh  justfile  mcp-tui-mode.patch  wonopcode.json  wonopcode_export_20260113_114139.md
.github/: dependabot.yml
.github/workflows/: ci.yml  coverage.yml  release.yml  scheduled.yml  security.yml  sync-external-prs.yml
crates/wonopcode/: Cargo.toml
crates/wonopcode-acp/: Cargo.toml
crates/wonopcode-acp/src/: agent.rs  lib.rs  processor.rs  session.rs  transport.rs  types.rs
crates/wonopcode-auth/: Cargo.toml
crates/wonopcode-auth/src/: error.rs  lib.rs  storage.rs
crates/wonopcode-core/: Cargo.toml
crates/wonopcode-core/src/: agent.rs  bus.rs  command.rs  config.rs  error.rs  format.rs  hook.rs  instance.rs  lib.rs  message.rs  permission.rs  project.rs  prompt.rs  retry.rs  revert.rs  session.rs  share.rs  system_prompt.rs  version.rs
crates/wonopcode-discover/: Cargo.toml
crates/wonopcode-discover/examples/: advertise_only.rs  browse_only.rs
crates/wonopcode-discover/src/: advertise.rs  browse.rs  error.rs  lib.rs  service.rs
crates/wonopcode-lsp/: Cargo.toml
crates/wonopcode-lsp/src/: client.rs  config.rs  error.rs  lib.rs  transport.rs
crates/wonopcode-mcp/: Cargo.toml
crates/wonopcode-mcp/src/: callback.rs  client.rs  error.rs  http_serve.rs  lib.rs  oauth.rs  protocol.rs  serve.rs  server.rs  sse.rs  transport.rs
crates/wonopcode-protocol/: Cargo.toml
crates/wonopcode-protocol/src/: action.rs  lib.rs  state.rs  update.rs
crates/wonopcode-provider/: Cargo.toml
crates/wonopcode-provider/src/: anthropic.rs  azure.rs  bedrock.rs  claude_cli.rs  copilot.rs  deepinfra.rs  error.rs  google.rs  groq.rs  lib.rs  message.rs  mistral.rs  mock.rs  model.rs  models_dev.rs  openai.rs  openai_compatible.rs  openrouter.rs  stream.rs  test.rs  together.rs  vertex.rs  xai.rs
crates/wonopcode-sandbox/: Cargo.toml
crates/wonopcode-sandbox/src/: config.rs  error.rs  lib.rs  monitor.rs  path.rs
crates/wonopcode-sandbox/src/image/: Dockerfile  lima.yaml
crates/wonopcode-sandbox/src/runtime/: docker.rs  lima.rs  mod.rs  passthrough.rs  podman.rs
crates/wonopcode-server/: Cargo.toml
crates/wonopcode-server/src/: git.rs  headless.rs  lib.rs  prompt.rs  routes.rs  sse.rs  state.rs  ws.rs
crates/wonopcode-snapshot/: Cargo.toml
crates/wonopcode-snapshot/src/: error.rs  lib.rs  snapshot.rs  store.rs
crates/wonopcode-storage/: Cargo.toml
crates/wonopcode-storage/src/: error.rs  json.rs  lib.rs  memory.rs
crates/wonopcode-test-utils/: Cargo.toml
crates/wonopcode-test-utils/src/: assertions.rs  builders.rs  fixtures.rs  lib.rs  mocks.rs  providers.rs  sandbox.rs
crates/wonopcode-tools/: Cargo.toml
crates/wonopcode-tools/src/: bash.rs  batch.rs  edit.rs  error.rs  glob.rs  grep.rs  lib.rs  list.rs  lsp.rs  mcp.rs  multiedit.rs  patch.rs  plan_mode.rs  read.rs  registry.rs  search.rs  skill.rs  task.rs  todo.rs  webfetch.rs  write.rs
crates/wonopcode-tui/: Cargo.toml
crates/wonopcode-tui-core/: Cargo.toml
crates/wonopcode-tui-core/src/: event.rs  lib.rs  metrics.rs  model_state.rs  theme.rs
crates/wonopcode-tui-dialog/: Cargo.toml
crates/wonopcode-tui-dialog/src/: command.rs  common.rs  git.rs  input.rs  lib.rs  mcp.rs  permission.rs  sandbox.rs  settings.rs  status.rs  timeline.rs
crates/wonopcode-tui-messages/: Cargo.toml
crates/wonopcode-tui-messages/src/: lib.rs
crates/wonopcode-tui-render/: Cargo.toml
crates/wonopcode-tui-render/src/: diff.rs  lib.rs  markdown.rs  sanitize.rs  syntax.rs
crates/wonopcode-tui-widgets/: Cargo.toml
crates/wonopcode-tui-widgets/src/: autocomplete.rs  footer.rs  help_overlay.rs  input.rs  lib.rs  logo.rs  mode_indicator.rs  onboarding.rs  search.rs  sidebar.rs  slash_commands.rs  spinner.rs  status.rs  timeline.rs  toast.rs  topbar.rs  which_key.rs
crates/wonopcode-tui/src/: app.rs  backend.rs  keybind.rs  lib.rs
crates/wonopcode-tui/src/widgets/: autocomplete.rs  dialog.rs  diff.rs  footer.rs  help_overlay.rs  input.rs  logo.rs  markdown.rs  messages.rs  mod.rs  mode_indicator.rs  onboarding.rs  search.rs  sidebar.rs  slash_commands.rs  spinner.rs  status.rs  syntax.rs  timeline.rs  toast.rs  topbar.rs  which_key.rs
crates/wonopcode-tui/src/widgets/dialog/: command.rs  common.rs  git.rs  input.rs  mcp.rs  permission.rs  sandbox.rs  settings.rs  status.rs  timeline.rs
crates/wonopcode-util/: Cargo.toml
crates/wonopcode-util/src/: bash_permission.rs  error.rs  file_time.rs  id.rs  lib.rs  log.rs  path.rs  perf.rs  timing.rs  wildcard.rs
crates/wonopcode/src/: compaction.rs  main.rs  main.rs.orig  publish.rs  runner.rs  stats.rs  upgrade.rs
crates/wonopcode/src/commands/: agent.rs  auth.rs  export.rs  logging.rs  mcp.rs  mod.rs  model.rs  run.rs  session.rs  web.rs
crates/wonopcode/src/github/: api.rs  event.rs  mod.rs  pr.rs
docs/: AGENT_LOOPS.md  CONFIGURATION.md  COVERAGE_PLAN.md  GETTING_STARTED.md  INSTALLATION.md  README.md  SANDBOXING.md
docs/architecture/: architecture-overview.md  crate-structure.md  overview.md  security-model.md
docs/contributing/: CONTRIBUTING.md  development-setup.md  testing.md
docs/guides/: custom-agents.md  first-session.md  hooks.md  ide-integration.md  mcp-servers.md  skills.md  tips-and-tricks.md  tools-overview.md
docs/reference/: cli.md  config-schema.md  environment-variables.md  keybindings.md  lsp-servers.md  slash-commands.md  tools-api.md
scripts/: check.sh  ci.sh  deps.sh  fmt.sh  install-tools.sh  lint.sh  udeps.sh
tests/: README.md  cli_tests.rs  config_tests.rs
