[workspace]
resolver = "2"
members = [
    "crates/wonopcode",
    "crates/wonopcode-util",
    "crates/wonopcode-storage",
    "crates/wonopcode-core",
    "crates/wonopcode-provider",
    "crates/wonopcode-tools",
    "crates/wonopcode-tui",
    "crates/wonopcode-server",
    "crates/wonopcode-snapshot",
    "crates/wonopcode-mcp",
    "crates/wonopcode-lsp",
    "crates/wonopcode-acp",
    "crates/wonopcode-auth",
    "crates/wonopcode-sandbox",
    "crates/wonopcode-protocol",
    "crates/wonopcode-discover",
    "crates/wonopcode-test-utils",
    # TUI sub-crates
    "crates/wonopcode-tui-core",
    "crates/wonopcode-tui-render",
    "crates/wonopcode-tui-widgets",
    "crates/wonopcode-tui-dialog",
    "crates/wonopcode-tui-messages",
]

[workspace.package]
version = "0.1.2"
edition = "2021"
license = "MIT"
repository = "https://github.com/wonop-io/wonopcode"
homepage = "https://github.com/wonop-io/wonopcode"
documentation = "https://docs.rs/wonopcode"
rust-version = "1.75"
keywords = ["ai", "cli", "coding-assistant", "llm", "terminal"]
categories = ["command-line-utilities", "development-tools"]

[workspace.dependencies]
# Workspace crates
wonopcode-util = { path = "crates/wonopcode-util" }
wonopcode-storage = { path = "crates/wonopcode-storage" }
wonopcode-core = { path = "crates/wonopcode-core" }
wonopcode-provider = { path = "crates/wonopcode-provider" }
wonopcode-tools = { path = "crates/wonopcode-tools" }
wonopcode-tui = { path = "crates/wonopcode-tui" }
wonopcode-server = { path = "crates/wonopcode-server" }
wonopcode-snapshot = { path = "crates/wonopcode-snapshot" }
wonopcode-mcp = { path = "crates/wonopcode-mcp" }
wonopcode-lsp = { path = "crates/wonopcode-lsp" }
wonopcode-acp = { path = "crates/wonopcode-acp" }
wonopcode-auth = { path = "crates/wonopcode-auth" }
wonopcode-sandbox = { path = "crates/wonopcode-sandbox" }
wonopcode-protocol = { path = "crates/wonopcode-protocol" }
wonopcode-discover = { path = "crates/wonopcode-discover" }
wonopcode-test-utils = { path = "crates/wonopcode-test-utils" }

# TUI sub-crates
wonopcode-tui-core = { path = "crates/wonopcode-tui-core" }
wonopcode-tui-render = { path = "crates/wonopcode-tui-render" }
wonopcode-tui-widgets = { path = "crates/wonopcode-tui-widgets" }
wonopcode-tui-dialog = { path = "crates/wonopcode-tui-dialog" }
wonopcode-tui-messages = { path = "crates/wonopcode-tui-messages" }

# Async runtime
tokio = { version = "1", features = ["full"] }
futures = "0.3"
async-stream = "0.3"
async-trait = "0.1"
tokio-util = { version = "0.7", features = ["codec"] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# HTTP
axum = { version = "0.8", features = ["ws"] }
reqwest = { version = "0.12", features = ["json", "stream"] }
tower = "0.5"
tower-http = { version = "0.6", features = ["cors", "trace"] }

# CLI & TUI
clap = { version = "4", features = ["derive"] }
ratatui = { version = "0.30", features = ["unstable-rendered-line-info"] }
crossterm = "0.28"
tui-textarea = { version = "0.7", default-features = false, features = ["crossterm"] }

# Error handling
thiserror = "2"
anyhow = "1"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Utilities
ulid = "1"
chrono = { version = "0.4", features = ["serde"] }
dirs = "6"
once_cell = "1"

# File operations
notify = "7"
glob = "0.3"
globwalk = "0.9"
ignore = "0.4"
similar = "2"

# Git (vendored-openssl for cross-compilation support)
git2 = { version = "0.20", features = ["vendored-openssl"] }

# Parsing
tree-sitter = "0.24"
tree-sitter-bash = "0.23"
pulldown-cmark = "0.12"
syntect = "5"

# Testing
mockall = "0.13"
tempfile = "3"
wiremock = "0.5"

# Misc
regex = "1"
url = "2"
base64 = "0.22"
uuid = { version = "1", features = ["v4"] }
sha2 = "0.10"
rand = "0.8"
arboard = "3"
walkdir = "2"
serde_yaml = "0.9"
bollard = "0.18"
bytesize = "1"

[workspace.lints.clippy]
# Keep only real bug-catching lints
result_large_err = "warn"
redundant_clone = "warn"
large_enum_variant = "warn"
too_many_arguments = "warn"

# Complexity metrics - warn on overly complex functions
cognitive_complexity = "allow"

# Explicitly allow noisy style lints
needless_borrow = "allow"
uninlined_format_args = "allow"
print_literal = "allow"

[workspace.lints.rust]
# Require documentation on public items
# missing_docs = "warn"  # Enable this incrementally per-crate
unsafe_code = "warn"

[profile.release]
lto = true
codegen-units = 1
strip = true
