[package]
name = "wonopcode-auth"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
documentation.workspace = true
keywords.workspace = true
categories.workspace = true
description = "Authentication storage and OAuth support for wonopcode"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1", features = ["fs", "sync"] }
dirs = "6.0"
thiserror = "2.0"
tracing = "0.1"

[dev-dependencies]
tempfile = "3.10"
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }

[lints]
workspace = true
