[package]
name = "wonopcode-tui-core"
version = "0.1.0"
edition = "2021"
description = "Core types and utilities for wonopcode TUI"
license = "MIT"

[dependencies]
ratatui = "0.29"
crossterm = "0.28"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
dirs = "6"
once_cell = "1"
tokio = { version = "1", features = ["sync", "time", "macros", "rt"] }
tracing = "0.1"

[dev-dependencies]
