[package]
name = "wonopcode-tui-dialog"
version = "0.1.0"
edition = "2021"
description = "Dialog widgets for wonopcode TUI"
license = "MIT"

[dependencies]
wonopcode-tui-core.workspace = true
wonopcode-core.workspace = true

ratatui.workspace = true
crossterm.workspace = true
chrono.workspace = true
serde.workspace = true
serde_json.workspace = true

[dev-dependencies]
