[package]
name = "wonopcode-util"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
documentation.workspace = true
keywords.workspace = true
categories.workspace = true
description = "Shared utilities for wonopcode"

[dependencies]

tracing.workspace = true
tracing-subscriber.workspace = true
serde.workspace = true
serde_json.workspace = true
ulid.workspace = true
chrono.workspace = true
dirs.workspace = true
once_cell.workspace = true
tokio = { workspace = true, features = ["sync"] }

[dev-dependencies]
tempfile.workspace = true

[lints]
workspace = true
